# diffski

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  config.rs  delta.rs  filter.rs  git.rs  main.rs  search.rs  ui.rs  update.rs  watch.rs
