[package]
name = "diffski"
version = "0.1.0"
edition = "2024"
description = "Live diff TUI for reviewing changes as a coding agent works"
license = "MIT"

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
notify-debouncer-mini = "0.7.0"
# crossterm is used via ratatui's re-export (ratatui::crossterm) to guarantee a
# single, matching version; notify is used via notify-debouncer-mini::notify.
ratatui = "0.30.2"
