[package]
name = "diffski"
version = "0.2.1"
edition = "2024"
description = "Live diff TUI for reviewing changes as a coding agent works"
license = "MIT"
authors = ["Kevin O'Shea"]
repository = "https://github.com/koshea/diffski"
readme = "README.md"

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
# crossterm is used via ratatui's re-export (ratatui::crossterm) to guarantee a
# single, matching version. Change detection polls `git status` (see watch.rs),
# so there's no filesystem-watcher dependency.
ratatui = "0.30.2"
